Fix navbar1 overflow

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,6 +3,10 @@
   General
   ========================================
 */
+body {
+    max-width: 1300px;
+    margin: 0 auto;
+}
 img {
     cursor: pointer;
 }
@@ -68,9 +72,6 @@ h6 {
   ========================================
 */
 
-.main {
-    width: ;
-}
 
 figcaption a {
     font-weight: 700;
